грязная регистрация кейкок

--- a/Kladovka/appsettings.Development.json
+++ b/Kladovka/appsettings.Development.json
@@ -1,5 +1,10 @@
 {
-
+  "ConnectionStrings": {
+    "Default": "Host=postgres;Database=kladovka;Username=postgres;Password=123"
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
