--- a/Security/appsettings.Development.json
+++ b/Security/appsettings.Development.json
@@ -9,13 +9,14 @@
     "Default": "Host=postgres;Database=kladovka;Username=postgres;Password=123;"
   },
   "Keycloak": {
-    "Audience": "kladovka",
-    "Authority": "http://localhost:8090/realms/security",
-    "Issuer": "http://localhost:8090/realms/security",
+    "Authority": "http://keycloak:8080/realms/security",
     "AuthorizationUrl": "http://localhost:8090/realms/security/protocol/openid-connect/auth",
     "ClientId": "security",
     "ClientSecret": "iQVtOjJf7US5Ws8QRXP2jCmDa57HWJ2r",
     "MetadataAddress": "http://keycloak:8080/realms/security/.well-known/openid-configuration", //я писал know и не понимал почему оно не работает (надо было known)
-    "Realm": "security"
+    "Realm": "security",
+    "ApiAdminBaseUrl": "http://keycloak:8080",
+    "ApiClientId": "admin-cli",
+    "ApiClientSecret": "Qx7oWBvEhyhTWluuWGC5MPDizc0fAUfc"
   }
 }
