--- a/Kladovka/Kladovka.csproj
+++ b/Kladovka/Kladovka.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="2.6.1" />
+    <PackageReference Include="IdentityModel" Version="7.0.0" />
     <PackageReference Include="mediatr" Version="12.4.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
