--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       KC_DB_URL: jdbc:postgresql://postgres:5432/kladovka
       KC_DB_USERNAME: postgres
       KC_DB_PASSWORD: 123
+      KC_PROXY_HEADERS: xforwarded
     ports:
       - 8090:8080
     volumes:
@@ -73,57 +74,53 @@ services:
     networks:
       - kladovka_network
 
+  zookeeper:
+    container_name: zookeeper
+    image: confluentinc/cp-zookeeper:7.6.1
+    restart: on-failure
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - 2181:2181
+    networks:
+      - kladovka_network
 
+  kafka:
+    container_name: kafka
+    hostname: kafka
+    image: confluentinc/cp-kafka:7.6.1
+    restart: on-failure
+    depends_on:
+      - zookeeper
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: true
+    ports:
+      - 9092:9092
+    networks:
+      - kladovka_network
 
-
-
-  # zookeeper:
-  #   container_name: zookeeper
-  #   image: confluentinc/cp-zookeeper:7.6.1
-  #   restart: on-failure
-  #   environment:
-  #     ZOOKEEPER_CLIENT_PORT: 2181
-  #     ZOOKEEPER_TICK_TIME: 2000
-  #   ports:
-  #     - 2181:2181
-  #   networks:
-  #     - kladovka_network
-
-  # kafka:
-  #   container_name: kafka
-  #   hostname: kafka
-  #   image: confluentinc/cp-kafka:7.6.1
-  #   restart: on-failure
-  #   depends_on:
-  #     - zookeeper
-  #   environment:
-  #     KAFKA_BROKER_ID: 1
-  #     KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-  #     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
-  #     KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-  #     KAFKA_AUTO_CREATE_TOPICS_ENABLE: true
-  #   ports:
-  #     - 9092:9092
-  #   networks:
-  #     - kladovka_network
-
-  # kafka-ui:
-  #   container_name: kafka-ui
-  #   image: provectuslabs/kafka-ui:v0.7.2
-  #   restart: always
-  #   environment:
-  #     DYNAMIC_CONFIG_ENABLED: true
-  #     KAFKA_CLUSTERS_0_NAME: local
-  #     KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
-  #     KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
-  #   ports:
-  #     - 8100:8080
-  #   depends_on:
-  #     - zookeeper
-  #     - kafka
-  #   networks:
-  #     - kladovka_network
+  kafka-ui:
+    container_name: kafka-ui
+    image: provectuslabs/kafka-ui:v0.7.2
+    restart: always
+    environment:
+      DYNAMIC_CONFIG_ENABLED: true
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
+      KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
+    ports:
+      - 8100:8080
+    depends_on:
+      - zookeeper
+      - kafka
+    networks:
+      - kladovka_network
 volumes:
   postgres_data:
