--- a/Security/appsettings.Development.json
+++ b/Security/appsettings.Development.json
@@ -9,6 +9,7 @@
     "Default": "Host=postgres;Database=kladovka;Username=postgres;Password=123;"
   },
   "Keycloak": {
+    "ClientUuid": "8dd4b223-fb05-4e7c-8896-c17bd502ed21",
     "Authority": "http://keycloak:8080/realms/security",
     "AuthorizationUrl": "http://localhost:8090/realms/security/protocol/openid-connect/auth",
     "ClientId": "security",
