email notification smtp

--- a/Notification/Notification/appsettings.json
+++ b/Notification/Notification/appsettings.json
@@ -1,11 +1,9 @@
 {
-  "ConnectionStrings": {
-    "Default": "Host=postgres;Database=kladovka;Username=postgres;Password=123"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
