--- a/launchSettings.json
+++ b/launchSettings.json
@@ -5,7 +5,8 @@
       "commandVersion": "1.0",
       "serviceActions": {
         "kladovka": "StartDebugging",
-        "security": "StartDebugging"
+        "security": "StartDebugging",
+        "notification": "StartDebugging"
       }
     }
   }
